Unable to paste twice in input field when specific CSS present https://bugs.webkit.org/show_bug.cgi?id=108675

Patch by Sukolsak Sakshuwong <sukolsak@gmail.com> on 2013-04-11
Reviewed by Ryosuke Niwa.

Source/WebCore:

When we are pre-rendering text in ReplaceSelectionCommand, we shouldn't care
whether the content is clipped by its ancestors or not. This bug was caused
by the fact the plainText() method returned an empty string because the text
was fully clipped by its ancestors. Make plainText ignore style visibility.

Test: editing/inserting/insert-text-into-text-field.html

* editing/ReplaceSelectionCommand.cpp:
(WebCore::ReplacementFragment::ReplacementFragment):

LayoutTests:

* editing/inserting/insert-text-into-text-field-expected.txt: Added.
* editing/inserting/insert-text-into-text-field.html: Added.

Canonical link: https://commits.webkit.org/132863@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148251 268f45cc-cd09-0410-ab3c-d52691b4dbfc